portfolio-single.html

--- a/portfolio-single.html
+++ b/portfolio-single.html
@@ -106,13 +106,13 @@
 
 				<div class="row">
 					<figure class="animate-box">
-						<img src="p/bck26.jpg" >
+						<img src="bck26.jpg" >
 					</figure>
 					<figure class="animate-box">
-						<img src="p/bck31.jpg" >
+						<img src="bck31.jpg" >
 					</figure>
 					<figure class="animate-box">
-						<img src="p/bck27.jpg" >
+						<img src="bck27.jpg" >
 					</figure>
 				</div>
 	
